syntax = "proto3";

option csharp_namespace = "OrganizationUnit.API.Protos.Configurations";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

package OrganizationUnitAPI.Configurations;

service ConfigurationSystemParameterGrpc {
	rpc GetNumberDaysBadDebt(google.protobuf.Empty) returns (google.protobuf.Int32Value) {}
	rpc GetSystemConfiguration(google.protobuf.Empty) returns (SystemConfigurationParamsGrpcDTO){}
}

message SystemConfigurationParamsGrpcDTO {
	google.protobuf.Int32Value changeRecordExportExcel =  1;
	google.protobuf.Int32Value changeRecordExportPdf =  2;
	google.protobuf.StringValue organizationUnit =  3;
	google.protobuf.StringValue address =  4;
	google.protobuf.StringValue taxCode =  5;
	google.protobuf.StringValue bankAccount =  6;
	google.protobuf.StringValue telephoneSwitchboard =  7;
	google.protobuf.StringValue representativePersonName =  8;
	google.protobuf.StringValue rpPosition =  9;
	google.protobuf.StringValue authorizationLetterNumber = 10;
	google.protobuf.StringValue tradingAddress = 11;
	google.protobuf.StringValue website = 12;
	google.protobuf.Int32Value numberDaysBadDebt = 13;
	google.protobuf.Int32Value numberDaysOverdue = 14;
	google.protobuf.Int32Value notifyChannelExpirationDays = 15;
    google.protobuf.StringValue bankName = 16;
    google.protobuf.StringValue bankBranch = 17;
	google.protobuf.Int32Value cODCollectionFee = 18;
}